--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "grunt-contrib-nodeunit": "~0.1.0",
     "grunt": "~0.4.1",
     "chalk": "~0.2.0",
-    "lodash": "~1.3.1"
+    "lodash": "~1.3.1",
+    "grunt-contrib-less": "~0.7.0"
   },
   "keywords": [
     "gruntplugin"
