--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "grunt": "~0.4.1",
     "chalk": "~0.2.0",
     "lodash": "~1.3.1",
-    "grunt-contrib-less": "~0.7.0"
+    "assemble-less": "~0.5.1"
   },
   "keywords": [
     "gruntplugin"
